--- a/smockerVaadin/src/main/webapp/VAADIN/themes/smocker/styles.scss
+++ b/smockerVaadin/src/main/webapp/VAADIN/themes/smocker/styles.scss
@@ -33,6 +33,12 @@ v-accordion-item-open {
     line-height: 16px;
 }
 
+.spacey-button {
+    margin-left: 20px;
+    margin-bottom: auto;
+}
+
+
 v-tabsheet-tabitemcell-smocker{
      .v-captiontext {
        font-weight: bold;
@@ -67,6 +73,11 @@ v-tabsheet-tabitemcell-smocker{
       font-size: x-small;
       text-shadow: #fafafa 1px 1px 0;
 }
+
+.v-splitpanel-hsplitter-mainramhsplitpanel,
+.v-splitpanel-hsplitter-mainramhsplitpanel div  {
+    width: 0px;
+} 
 
 .button-with-right-alligned-icon {
   [class*="wrap"] {
