--- a/smockerVaadin/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/smockerVaadin/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -9,7 +9,14 @@
     .v-margin-right  {padding-right:  0px;}
     .v-margin-top    {padding-top:    0px;}
     .v-margin-bottom {padding-bottom: 0px;}
-
+	.v-textarea { overflow-y: auto ! important;}
+	
+	.smallMargin {
+		margin-top: 3px;
+	    margin-bottom: 3px;
+	    margin-right: 3px;
+	    margin-left:3px;
+	}
 }
 
 
