--- a/smockerVaadin/src/main/resources/com/jenetics/smocker/ui/view/SocketGraph.html
+++ b/smockerVaadin/src/main/resources/com/jenetics/smocker/ui/view/SocketGraph.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
- <head>
-  <meta charset="UTF-8">
-  <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;smocker&quot;}">
-  <meta name="vaadin-version" content="7.7.0">
- </head>
- <body>
-  <vaadin-vertical-layout size-full></vaadin-vertical-layout>
- </body>
+<head>
+<meta charset="UTF-8">
+<meta name="design-properties"
+	content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;smocker&quot;}">
+<meta name="vaadin-version" content="7.7.0">
+</head>
+<body>
+	<vaadin-vertical-layout size-full></vaadin-vertical-layout>
+</body>
 </html>
