--- a/smockerVaadin/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/smockerVaadin/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -129,7 +129,10 @@
 	
    .v-gridlayout-Config {
 	    margin: 5px;
+	    padding: 5px;
 	    width: "100%";
+	    border: 1px solid black;
+	    border-radius: 5px;
    }
     	    
     .v-gridlayout-TopBar {
