--- a/smockerVaadin/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/smockerVaadin/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -211,6 +211,9 @@
 		outline: none;
 	}
 	
+	.v-vertical-no-space > .v-spacing {
+	    height: 30px;
+	}
 	
 	.v-accordion-Nav {
 		.v-accordion-item {
